Fix navbar button alignment

--- a/css/menu.css
+++ b/css/menu.css
@@ -18,7 +18,7 @@ nav a {
 	font-size: 16px;
 	color: white;
 	text-align: center;
-	padding: 14px 30px;
+	padding: 1rem 30px;
 	text-decoration: none;
 }
 
